About paragraph content improved

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
    
     <div class="main-content">
        {{>header}}
-       <p>This site was created by Anand Tsogtbaatar. The geographic location data is fetched from mapbox.com and the weather data is used from weatherstack.com API.</p>
+       <p>This site was created by Anand Tsogtbaatar. The geographic location data is fetched from mapbox API and the weather data is fetched from weatherstack API.</p>
       <img id="pic" alt="marathon picture" src="./img/marathon.JPG" />
     {{>footer}}
     </div>
