Wind Direction retreived and implemented in index page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,6 +19,7 @@
       <div>
         <p id="location"></p>
         <p id="location-weather"></p>
+        <p id="wind"></p>
       </div>
     {{>footer}}
     </div>
